<resources>
    <string name="app_name">AudioTacho</string>
    <string name="action_settings">Settings</string>
    <string name="speed_unit_kmh">km/h</string>
    <string name="distance_unit_km">km</string>
    <string name="zero_value_double_3digits">0.00</string>
    <string name="zero_value_double_4digits">0.000</string>
    <string name="start_measuring">Start Tacho!</string>
    <string name="stop_measuring">Stop Tacho!</string>
    <string name="speed_realtime"> (Realtime)</string>
    <string name="speed_average2"> (2-Average)</string>
    <string name="speed_average3"> (3-Average)</string>
    <string name="distance"> (Distance)</string>
    <string name="circumference_setting">Tire circumference</string>
    <string name="circumference_setting_summ">Tire circumference in mm</string>
    <string name="default_circumference">1000</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
